--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Mathematical Quiz</title>
     <link rel="stylesheet" href="style.css">
     <link
@@ -28,12 +28,12 @@
     
     
     <div class="box animated zoomIn delay-1s">
-        <h1><em>WELCOME TO THE WORLD OF MATHEMATICAL QUIZ</em></h1>
+        <h1>WELCOME TO THE WORLD OF MATHEMATICAL QUIZ</h1>
         <br>
         <button
-          class="btn btn-outline-danger  btn-lg animated infinite bounce heartBeat"
+          class="btn btn-outline-secondary btn-light  btn-lg animated infinite bounce heartBeat"
         >
-          <a style="color: rgb(99, 167, 213); text-decoration: none" href="page2.html"
+          <a style="color: rgb(58, 172, 203); text-decoration: none" href="page2.html"
             ><b>Let's Begin</b></a
           >
         </button>
