--- a/page2.html
+++ b/page2.html
@@ -10,8 +10,8 @@
 <link rel="manifest" href="/site.webmanifest">
     <title>MATHEMATICAL RIDDLES</title>
     <link rel="stylesheet" href="style1.css">
-  
 </head>
+
 <body>
    
     <h1>The Math Game</h1>
@@ -29,7 +29,7 @@
 
           </div>
           <div id="instruction">
-              Click on the Correct Answer
+              Click on the correct choice otherwise time reduces by one second
           </div>
           <div id="choices">
               <div id="box1" class="box"></div>
@@ -42,7 +42,7 @@
           </div>
           
           <div id="timeremaining">
-              Time remaining :
+              Time Remaining :
               <span id="timeremainingvalue">60</span>
               sec
           </div>
